added responsive header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,44 @@
       }
     }
   </script>
+  <style>
+  .manrope-regular{
+    font-family: "Manrope", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+}
+  </style>
 </head>
-<body>
-    
+<body class="manrope-regular">
+    <main class="max-w-screen-xl mx-auto px-5 lg:px-28">
+      <header class="flex gap-4 pt-10 mb-20">
+        <div>
+            <h1 class="text-5xl md:text-7xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
+            <p class="w-3/4 py-7 text-lg font-medium text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="text-white font-bold p-5 my-6 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More<i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
+        </div>
+        <div class="relative">
+          <!-- image content -->
+        <div>
+            <img class="w-full" src="images/banner.png" alt="">
+        </div>
+        <!-- card -->
+         <div class="absolute flex items-center bg-white shadow-lg p-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+          <!-- icon -->
+           <div class="text-[#FFDC64]"><i class="fa-solid fa-star text-3xl"></i></div>
+           <!-- content -->
+            <div class="ml-3">
+              <h2 class="text-[#1C1C1C] text-3xl font-extrabold">5.00</h2>
+              <p class="text-[#777777] font-semibold">Trust Pilot Rating</p>
+            </div>
+           <div>
+
+           </div>
+         </div>
+        </div>
+    </header>
+    </main>
+    <footer></footer>
 </body>
 </html>
