added featured product

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 <body class="manrope-regular">
     <main class="max-w-screen-xl mx-auto px-5 lg:px-28">
-      <header class="flex gap-4 pt-10 mb-20">
+    <header class="lg:flex gap-4 pt-10 mb-20">
         <div>
-            <h1 class="text-5xl md:text-7xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
+            <h1 class="text-3xl md:text-5xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
             <p class="w-3/4 py-7 text-lg font-medium text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
             <button class="text-white font-bold p-5 my-6 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More<i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
         </div>
@@ -43,7 +43,7 @@
             <img class="w-full" src="images/banner.png" alt="">
         </div>
         <!-- card -->
-         <div class="absolute flex items-center bg-white shadow-lg p-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+         <div class="absolute flex items-center bg-white shadow-lg p-2 md:px-10 lg:py-4 rounded-lg top-3/4 left-20 md:top-50 md:left-60 lg:left-28">
           <!-- icon -->
            <div class="text-[#FFDC64]"><i class="fa-solid fa-star text-3xl"></i></div>
            <!-- content -->
@@ -57,6 +57,44 @@
          </div>
         </div>
     </header>
+    <!-- featured product section -->
+    <section class="py-8 lg:py-20">
+      <h2 class="text-center text-4xl text-[#1C1C1C] font-extrabold">Our Featured Products</h2>
+      <p class="text-[#777777] font-medium my-5 py-4 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <!-- card-container -->
+       <div class="space-y-5 md:grid grid-cols-2 lg:grid-cols-4 gap-8">
+        <!-- card -->
+        <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
+          <img class="" src="images/tea-1.png" alt="">
+          <h3 class="text-2xl font-extrabold text-[#1C1C1C]">Milk Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+
+        </div>
+
+        <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
+          <img class="" src="images/tea-2.png" alt="">
+          <h3 class="text-2xl font-extrabold text-[#1C1C1C]">Black Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
+          <img class="" src="images/tea-3.png" alt="">
+          <h3 class="text-2xl font-extrabold text-[#1C1C1C]">Lemon Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
+          <img class="" src="images/tea-4.png" alt="">
+          <h3 class="text-2xl font-extrabold text-[#1C1C1C]">Green Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+       </div>
+    </section>
+    <!-- quality description section -->
+     <section>
+
+     </section>
     </main>
     <footer></footer>
 </body>
