--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body class="manrope-regular">
-    <main class="max-w-screen-xl mx-auto px-5 lg:px-28">
+    <main class="max-w-screen-xl mx-auto px-5 lg:px-16">
     <header class="lg:flex gap-4 pt-10 mb-20">
         <div>
             <h1 class="text-3xl md:text-5xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
@@ -60,15 +60,14 @@
     <!-- featured product section -->
     <section class="py-8 lg:py-20">
       <h2 class="text-center text-4xl text-[#1C1C1C] font-extrabold">Our Featured Products</h2>
-      <p class="text-[#777777] font-medium my-5 py-4 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <p class="text-[#777777] font-medium py-4 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
       <!-- card-container -->
-       <div class="space-y-5 md:grid grid-cols-2 lg:grid-cols-4 gap-8">
+       <div class="md:grid grid-cols-2 lg:grid-cols-4 my-6 gap-8">
         <!-- card -->
         <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
           <img class="" src="images/tea-1.png" alt="">
           <h3 class="text-2xl font-extrabold text-[#1C1C1C]">Milk Tea</h3>
           <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
-
         </div>
 
         <div class="flex flex-col justify-center items-center gap-5 p-4 bg-gradient-to-b from-[#F4F4F4] to-[#ffff]">
@@ -92,10 +91,182 @@
        </div>
     </section>
     <!-- quality description section -->
-     <section>
+     <section class="py-6 lg:py-10">
+      <div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
 
+        <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+
+          <div class="h-36 rounded-xl bg-gradient-to-r from-red-100 to-white"></div>
+          <div class="bg-orange-50 rounded-xl row-span-2">
+          <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+
+        </div>
+        <div class="bg-stone-100 rounded-xl row-span-2">
+          <img class="mx-auto py-5" src="images/fresh-2.png" alt="">
+        </div>
+        <div class="h-36 rounded-xl bg-gradient-to-r from-stone-100 to-white"></div>
+
+        </div>
+        
+        <div>
+          <h2 class="text-4xl font-extrabold text-[#1C1C1C]">Great Tea, Freshly Presented</h2>
+          <p class="font-medium py-7 text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="text-xl font-extrabold">Unique Taste</h4>
+          <p class="font-medium py-4 text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h4 class="text-xl font-extrabold">Premium Quality</h4>
+          <p class="font-medium py-4 text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+      </div>
      </section>
+
+    <!-- clients section -->
+     <section class="mb-12">
+
+      <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-14">
+
+        <!-- text -->
+        
+        <div class="flex justify-center items-center">
+          <div class="py-5 w-5/6">
+          <h2 class="text-4xl font-extrabold">Meet Our Super Clients</h2>
+
+          <p class="font-medium py-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+          <button class="rounded-lg py-4 px-7 text-xl font-bold bg-white text-orange-500">Show All</button>
+        </div>
+        </div>
+
+        <div class="relative py-20">
+          <!-- review card top -->
+          <div class="absolute z-10 top-48 md:top-52">
+            <div class="relative h-56 bg-white rounded-lg text-black w-full md:w-3/4 flex items-center px-5">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="images/client.png" alt="">
+            </div>
+            <div>
+              <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <small class="font-medium text-[#5D5A6F]">Businessman</small>
+            </div>
+          </div>
+          </div>
+          <!-- review card 1-->
+          <div class="relative left-6 md:left-32 opacity-45 h-56 bg-white rounded-lg text-black w-full md:w-3/4 flex items-center px-5">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="images/client.png" alt="">
+            </div>
+            <div>
+              <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <small class="font-medium text-[#5D5A6F]">Businessman</small>
+            </div>
+          </div>
+          <!-- review card-2 -->
+          <div class="relative left-6 top-6 md:left-32 opacity-45 h-56 bg-white rounded-lg text-black w-full md:w-3/4 flex items-center px-5">
+           <div class="absolute -top-5 -left-5 bg-white rounded-full">
+             <img class="p-1" src="images/client.png" alt="">
+           </div>
+           <div>
+             <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+             <h4 class="font-bold">Ilham Yuda</h4>
+             <small class="font-medium text-[#5D5A6F]">Businessman</small>
+           </div>
+          </div>
+        </div>
+
+      </div>
+     </section>
+     <!-- event section -->
+      <section class="mb-12">
+
+        <h2 class="text-4xl font-extrabold text-center text-[#1C1C1C]">News & Events</h2>
+
+        <p class=" mb-6 py-6 text-center font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+        <!-- card container -->
+         <div class="grid gap-5 md:grid-cols-2 lg:grid-cols-3">
+          <!-- card -->
+           <div class="space-y-3  border-2 p-6 rounded-xl w-80 border-gray-400 mx-auto">
+            <img src="images/news-1.png" alt="">
+            <small class="text-[#777777]">Feb 05, 2027</small>
+            <h4 class="text-xl font-extrabold">Collecting 8 points for discount</h4>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+            <button class="font-bold">Learn More</button>
+           </div>
+
+           <div class="space-y-3 border-2 p-6 rounded-xl w-80 border-gray-400 mx-auto">
+            <img src="images/news-2.png" alt="">
+            <small class="text-[#777777]">Feb 05, 2027</small>
+            <h4 class="text-xl font-extrabold">Collecting 8 points for discount</h4>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+            <button class="font-bold">Learn More</button>
+           </div>
+
+           <div class="space-y-3 border-2 p-6 rounded-xl w-80 border-gray-400 mx-auto">
+            <img src="images/news-3.png" alt="">
+            <small class="text-[#777777]">Feb 05, 2027</small>
+            <h4 class="text-xl font-extrabold">Collecting 8 points for discount</h4>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+            <button class="font-bold">Learn More</button>
+           </div>
+         </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="bg-orange-100 py-8 px-4 md:px-16">
+      <div class="flex justify-around">
+        <img class="" src="images/cup.png" alt="">
+        <div class="flex flex-col gap-5 md:flex-row items-center">
+          <p class="text-[#494949]">Ready to get strated?</p>
+          <button class="rounded-lg text-white py-3 px-6 bg-gradient-to-r from-orange-500 to-red-500">Get Started</button>
+        </div>
+      </div>
+      <!-- text container -->
+       <div class="py-16 grid grid-cols-2 lg:grid-cols-4">
+        <div>
+          <h5 class="text-xl font-semibold py-6">Quick Links</h5>
+          <ul class="">
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Insurance</a></li>
+            <li><a href="">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div>
+          <h5 class="text-xl font-semibold py-6">Our Service</h5>
+          <ul>
+            <li>Life Insurance</li>
+            <li>Car Insurance</li>
+            <li>Health Insurance</li>
+            <li>House Insurance</li>
+          </ul>
+        </div>
+        <div>
+          <h5 class="text-xl font-semibold py-6">Help</h5>
+          <ul>
+            <li>FAQs</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="py-6 text-2xl font-semibold">Subscribe to our <br> newsletter</h4>
+
+          <div class="flex flex-col space-y-2">
+            <div>
+              <input placeholder="Email Address" type="text" class="bg-transparent border-b-2 border-gray-600 w-4/6 md:w-5/6"><i class="fa-solid fa-chevron-right bg-orange-500 inline-flex justify-center items-center rounded-full text-white w-7 h-7"></i>
+
+              <div class="flex gap-3 my-5">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+
+        </div>
+       </div>
+       <div class="text-center">
+          <small>© 2027 UIDesign.to - All rights reserved.</small>
+        </div>
+    </footer>
 </body>
 </html>
